src/objects/Bulk_Print_Summary__c.object
<CustomObject>
    <description>Table holding a summary record of a bulk print job</description>
    <fields>
        <fullName>Bulk_Form__c</fullName>
        <description>The type of form that was printed in the bulk print job</description>
        <label>Bulk Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BCP Letter</fullName>
                </value>
                <value>
                    <fullName>Welcome Letter</fullName>
                </value>
                <value>
                    <fullName>Seminar Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_Printed__c</fullName>
        <description>Should record the number of documents printed in this job</description>
        <label>Num Printed</label>
        <summaryForeignKey>Bulk_Print_Detail__c.Bulk_Print_No__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Print_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the bulk print job was marked as successful - checked is a success</description>
        <label>Print Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Printed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that ran the bulk print job</description>
        <label>Printed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Print_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printed_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Time the bulk print job was run</description>
        <label>Printed Time</label>
        <type>DateTime</type>
    </fields>
    <label>Bulk Print Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Bulk Print Summary Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Print Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>